  - add code to not load csv data for calculated function value

29 April 2011
  - working on shifting transformVO's into voState's from graphTrackerV, then get voFunction to set its values[]

04 May 2011
  - changed saveData so always save fn values
  - added setFnVals to voFunc to set all ; need some 'dirty' test to improve efficiency
  - fixed bug using ngmin/ngmax not gmin/gmax to display graph min/max in configvo  ??

05 May 2011
  - configTVO: tfDone sets activeField=nil, if not nil when tf_finishEditing then [tfDone:activeField] (fix tap next field not saving changed val)
  - voNumber: typo in setOptDictDflts, was setting nswll not nswl
  - voState: typo in (super) setOptDictDflts, was setting autoscale=dflt if graph==nil (fix autoscale not being saved, was actually set dflt after load)
  - voState:transformVO_num - fixed bug reading autostate, again assumed @"0" would test correctly as !autoscale
  - voChoice:segmentedControl - same test error on shrinkb
  - voTextBox:segmentChanged,voGraphSet - same test error on tbhi,tbni,tbnl
  - voTextBox:segmentChanged - release picker view so gets rebuilt (fix bugs on people, history pickers incl crash on switch)
  - added graphTrackerV:doDrawGraph controlling [drawRect] action, so graph not redrawn for return to utc
  - changed trackerObj so fn results (=value) *are* saved,loaded to speed graphing, but issues remain for updating, saving in db

--- check in ---

06 May 2011
  - added CGRects to divide up graph screen

10 May 2011
  - replaced dbg-defs defines with args... forms

13 May 2011
  - finished re-org of graphing to use UIScrollView for zoom etc, separate windows for title, axes.  still need work for axis labels

--- check in ---

18 May 2011
  - finished axis labels
  - tap on y axis label to change vo displayed
  - tap on graph to mark and set tracker date, double tap to clear
  - return to graph with current date marked 
  - factored dpRslt out of datePickerVC to facilitate this